Fix overwide replay detail page

--- a/hsreplaynet/joust/templates/joust/replay_detail.html
+++ b/hsreplaynet/joust/templates/joust/replay_detail.html
@@ -7,16 +7,16 @@
 {% endblock stylesheets %}
 
 {% block fullcontent %}
-<div id="tabletop">
+<div id="tabletop" class="container-fluid">
     <div class="row full_height">
         <div class="col-lg-offset-1 col-lg-10 col-xs-12 full_height">
             <div id="joust-container" class="full_height"></div>
         </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-lg-offset-1 col-lg-10 col-xs-12">
-        <p><a href="{{ replay_data_url }}">Download replay</a></p>
+    <div class="row">
+        <div class="col-lg-offset-1 col-lg-10 col-xs-12">
+            <p><a href="{{ replay_data_url }}">Download replay</a></p>
+        </div>
     </div>
 </div>
 
