--- a/hsreplaynet/web/static/web/my_replays.css
+++ b/hsreplaynet/web/static/web/my_replays.css
@@ -52,12 +52,20 @@ a.hsreplay-thumbnail:link, a.hsreplay-thumbnail:hover {
 	display: inline-block;
 	width: 50%;
 	position: relative;
-	background-color: black;
 	clip-path: rect(2%, 10%, 2%, 10%);
+}
+
+.hsreplay-involved figure:first-of-type {
+	padding-right: 1px;
+}
+
+.hsreplay-involved figure:last-of-type{
+	padding-left: 1px;
 }
 
 .hsreplay-involved figure img {
 	width: 100%;
+	background-color: black;
 }
 
 .hsreplay-involved figcaption {
@@ -117,7 +125,7 @@ a.hsreplay-thumbnail:link, a.hsreplay-thumbnail:hover {
 .hsreplay-versus {
 	position: absolute;
 	width: 12%;
-	bottom: 10%;
+	top: 44%;
 	margin-left: 44%;
 	z-index: 1;
 }
