Replace upload_agent field on the token by .tokens M2M

--- a/hsreplaynet/templates/api_docs.html
+++ b/hsreplaynet/templates/api_docs.html
@@ -84,7 +84,7 @@
 			Date: Mon, 8 February 2016 22:38:34 GMT
 
 			{
-				"single_site_upload_token": [TOKEN]
+				"token": [TOKEN]
 			}
 		</pre>
 	</div>
