Add admin link to navbar

--- a/hsreplaynet/templates/home.html
+++ b/hsreplaynet/templates/home.html
@@ -65,7 +65,7 @@
 					<figure class="front-feature flip">
 						<img src="{% static 'web/images/front-feat-stats.jpg' %}" alt="Monthly statistics" height="120" width="190" />
 						<figcaption>
-							<h2>Analyze your gameplay.</h2>
+							<h2>Analyze your gameplay</h2>
 							<p>
 								A clear game history, filterable per season, game type and more.
 								Follow your progress to legend with wins and losses visible at a glance.
