--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -3,36 +3,36 @@
 {% load static from staticfiles %}
 {% load socialaccount %}
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    {% block title %}
-        <title>HSReplay.net</title>
-    {% endblock title %}
+	{% block title %}
+		<title>HSReplay.net</title>
+	{% endblock title %}
 
-      {% block stylesheets %}
-		  <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
-          <link href="{% static 'web/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-          <!-- base.css should come after all Bootstrap CSS -->
-          <link href="{% static 'web/base.css' %}" rel="stylesheet"/>
-          <link href="{% static 'web/my_replays.css' %}" rel="stylesheet"/>
-      {% endblock stylesheets %}
+	{% block stylesheets %}
+		<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
+		<link href="{% static 'web/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+		<!-- base.css should come after all Bootstrap CSS -->
+		<link href="{% static 'web/base.css' %}" rel="stylesheet"/>
+		<link href="{% static 'web/my_replays.css' %}" rel="stylesheet"/>
+	{% endblock stylesheets %}
 
-    <link rel="shortcut icon" type="image/png" href="{% static  'web/images/favicon.ico' %}"/>
+	<link rel="shortcut icon" type="image/png" href="{% static  'web/images/favicon.ico' %}"/>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="{% static 'web/jquery.min.js' %} "></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{% static 'web/bootstrap/js/bootstrap.min.js' %}"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react-dom.min.js"></script>
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="{% static 'web/jquery.min.js' %} "></script>
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="{% static 'web/bootstrap/js/bootstrap.min.js' %}"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react-dom.min.js"></script>
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!--[if lt IE 9]>
+		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
 </head>
 <body>
 	<header>
@@ -41,7 +41,10 @@
 			<a href="/"><img src="{% static 'web/images/logo.png' %}" id="navbar-logo" alt="HSReplay"/><h1>HSReplay</h1></a>
 			<ul>
 			{% if user.is_authenticated %}
-				<li><a href="{% url 'my_replays' %}">My Replays</a></li>
+				<li class="nav-replays"><a href="{% url 'my_replays' %}">My Replays</a></li>
+				{% if user.is_staff %}
+					<li class="nav-admin"><a href="{% url 'admin:index' %}">Admin</a></li>
+				{% endif %}
 			{% endif %}
 			</ul>
 
