--- a/hsreplaynet/templates/account/base.html
+++ b/hsreplaynet/templates/account/base.html
@@ -7,6 +7,7 @@
 			<li><a href="{% url 'account_email' %}">Update email</a></li>
 			<li><a href="{% url 'account_change_password' %}">Change password</a></li>
 			<li><a href="{% url 'socialaccount_connections' %}">Battle.net Linking</a></li>
+			<li><a href="{% url 'account_delete' %}">Delete account</a></li>
 		</ul>
 	</nav>
 	{% block content %}{% endblock %}
