--- a/hsreplaynet/web/static/web/base.css
+++ b/hsreplaynet/web/static/web/base.css
@@ -183,3 +183,14 @@ header nav h1 {
 .promo-link:hover, .promo-link:active {
 	color: #c9485b;
 }
+
+#site-messages:not(:empty) {
+	background-color: #4677B7;
+	border: 1px solid #1D3657;
+	color: white;
+	list-style: none;
+	margin: 1em auto;
+	padding: 1em;
+	text-align: center;
+	width: 300px;
+}
