Replace the hero_cardid field by a foreign key to Card
Closes #8

--- a/hsreplaynet/templates/games/my_replays.html
+++ b/hsreplaynet/templates/games/my_replays.html
@@ -16,7 +16,7 @@
 				<img src="{% static 'web/images/vs.png' %}" class="hsreplay-versus"/>
 				{% for player in replay.global_game.players.all %}
 				<figure class="{% if player.won %}winner{% else %}loser{% endif %}">
-					<img src="//static.hsreplay.net/static/joust/card-art/{{ player.hero_card_id }}.jpg" alt="{{ player.hero_card_id }}"/>
+					<img src="//static.hsreplay.net/static/joust/card-art/{{ player.hero_id }}.jpg" alt="{{ player.hero_id }}"/>
 					<figcaption>{{ player.name }}</figcaption>
 				</figure>
 				{% endfor %}
