--- a/hsreplaynet/templates/games/my_replays.html
+++ b/hsreplaynet/templates/games/my_replays.html
@@ -16,7 +16,7 @@
 				<img src="{% static 'web/images/vs.png' %}" class="hsreplay-versus"/>
 				{% for player in replay.global_game.players.all %}
 				<figure class="{% if player.won %}winner{% else %}loser{% endif %}">
-					<img src="//static.hsreplay.net/static/joust/card-art/{{ player.hero_id }}.jpg" alt="{{ player.hero_id }}"/>
+					<img src="{% setting 'JOUST_STATIC_URL' %}/card-art/{{ player.hero_id }}.jpg" alt="{{ player.hero_id }}"/>
 					<figcaption>{{ player.name }}</figcaption>
 				</figure>
 				{% endfor %}
@@ -52,7 +52,7 @@
 	<div class="text-center">
 		<h1>Play a few games!</h1>
 		<p>Your replays will appear here once you've uploaded them using Hearthstone Deck Tracker.</p>
-		<p><a href="https://hsdecktracker.net/" class="promo-button">Download HDT</a></p>
+		<p><a href="{% setting 'HDT_DOWNLOAD_URL' %}" class="promo-button">Download HDT</a></p>
 	</div>
 {% endif %}
 </div>
