--- a/hsreplaynet/templates/account/base.html
+++ b/hsreplaynet/templates/account/base.html
@@ -1,15 +1,29 @@
 {% extends "base.html" %}
+{% load static from staticfiles %}
+
+{% block stylesheets %}
+	{{ block.super }}
+	<link href="{% static 'web/account.css' %}" rel="stylesheet"/>
+{% endblock stylesheets %}
 
 {% block fullcontent %}
-<div class="page page-account">
-	<nav>
-		<ul class="nav">
-			<li><a href="{% url 'account_email' %}">Update email</a></li>
-			<li><a href="{% url 'account_change_password' %}">Change password</a></li>
-			<li><a href="{% url 'socialaccount_connections' %}">Battle.net Linking</a></li>
-			<li><a href="{% url 'account_delete' %}">Delete account</a></li>
-		</ul>
-	</nav>
-	{% block content %}{% endblock %}
-</div>
+	{% if user.is_authenticated %}
+		<nav class="navbar navbar-default">
+			<div class="container">
+				<ul class="nav navbar-nav">
+					<li><a href="{% url 'account_edit' %}">General</a></li>
+					<li><a href="{% url 'account_email' %}">E-Mail</a></li>
+					<li><a href="{% url 'account_change_password' %}">Password</a></li>
+					<li><a href="{% url 'socialaccount_connections' %}">Battle.net</a></li>
+					<li><a href="{% url 'account_delete' %}">Delete account</a></li>
+				</ul>
+				<ul class="nav navbar-nav">
+					<li class="pull-right"><a href="{% url 'account_logout' %}">Sign out</a></li>
+				</ul>
+			</div>
+		</nav>
+	{% endif %}
+	<div class="container">
+		{% block content %}{% endblock %}
+	</div>
 {% endblock %}
