Rename Joust bundle.js to joust.js

--- a/hsreplaynet/templates/games/replay_detail.html
+++ b/hsreplaynet/templates/games/replay_detail.html
@@ -31,7 +31,7 @@
 	</div>
 </div>
 
-<script src="{% joust_static 'bundle.js' %}"></script>
+<script src="{% joust_static 'joust.js' %}"></script>
 <script>
 	$(document).ready(function() {
 		var cb = function (buildNumber, cb) {
