Tweak replay detail heading position

--- a/hsreplaynet/templates/games/replay_detail.html
+++ b/hsreplaynet/templates/games/replay_detail.html
@@ -16,9 +16,12 @@
 
 {% block fullcontent %}
 
-<h1>{{ replay }} - {{ replay.duration }}</h1>
-
 <div id="tabletop" class="container-fluid">
+	<div class="row">
+		<div class="col-lg-offset-1 col-lg-10 col-xs-12">
+			<h1>{{ replay }} - {{ replay.duration }}</h1>
+		</div>
+	</div>
 	<div class="row full_height">
 		<div class="col-lg-offset-1 col-lg-10 col-xs-12 full_height">
 			<div id="joust-container" class="full_height" data-replayurl="{{ replay.replay_xml.url }}"></div>
