Home page: Add description meta tag

--- a/hsreplaynet/templates/home.html
+++ b/hsreplaynet/templates/home.html
@@ -8,6 +8,10 @@
 	<link href="{% static 'web/home.css' %}" rel="stylesheet"/>
 {% endblock stylesheets %}
 
+{% block description %}
+	<meta name="description" content="Share your Hearthstone games using Hearthstone Deck Tracker.">
+{% endblock %}
+
 {% block header %}
 {% endblock %}
 
