--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -12,6 +12,8 @@
 		<title>HSReplay.net</title>
 	{% endblock title %}
 
+	{% block description %}{% endblock description %}
+
 	{% block stylesheets %}
 		<link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
 		<link href="{% static 'web/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
