--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -23,6 +23,7 @@
 	{% endblock stylesheets %}
 
 	<link rel="shortcut icon" type="image/png" href="{% static  'web/images/favicon.ico' %}"/>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.2/react-dom.min.js"></script>
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
