Joust: Add missing SVG shim for weapon art

--- a/hsreplaynet/templates/games/svg-paths-shim.css
+++ b/hsreplaynet/templates/games/svg-paths-shim.css
@@ -16,3 +16,6 @@
 .heroPower div.visuals .hero-power-portrait {
 	clip-path: url({{svg}}#hero-power-clip);
 }
+.weapon div.visuals .hero-weapon-portrait {
+	clip-path: url({{svg}}#hero-weapon-clip);
+}
